# mexican-train

./: .gitignore  ADMIN_AUTH_TIMEOUT_FIX.md  AI_STRATEGY_GUIDE.md  AI_TESTING_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  DEVELOPMENT_STATUS.md  EMAIL_IMPLEMENTATION_PLAN.md  LOGGING_CONVERSION_SUMMARY.md  LOGGING_IMPLEMENTATION_COMPLETE.md  README.md  create_rotated_dominos.py  d_01.tscn  d_02.tscn  d_03.tscn  d_092.tscn  d_12.tscn  debug_lobby.ps1  docker-compose.yml  generate_all_dominos.py  generate_base_dominos.py  generate_rotated_dominoes.py  icon.svg.import  main.gd.uid  main.tscn  new_script.gd  new_script1.gd  project.godot  rename_test_files.ps1  root.tscn  start_server.bat  start_server.ps1  test_admin_timeout.ps1  test_cs_admin.ps1  test_domino_count.gd  test_domino_count.gd.uid  test_domino_system.gd.uid  test_experimental_dominoes.ps1  test_gameconfig.gd  (+17 more)
backend/: .gitignore  Dockerfile.dev  ai_test.py  alembic.ini  api_consistent_test.py  init.sql  pyproject-minimal.toml  pyproject.toml  websocket_ai_test.py
backend/alembic/: env.py
backend/api_consistent_results/: api_session_20250831_025259.json  api_session_20250831_025315.json
backend/app/: ai_strategies.json  main.py
backend/app/api/: admin.py  (+3 more)
backend/comparison_api_results/: api_session_20250831_025218.json  api_session_20250831_025237.json
backend/comparison_original_results/: session_20250831_025218.json  session_20250831_025237.json
backend/debug_test/: session_20250830_194840.json
backend/tournament_2024/: session_20250830_194400.json  tournament_20250830_195316.json
(+6959 files in other folders)
